Fix contrast on alumni icons

--- a/web/themes/custom/citizen_dart/components/00-base/variables/_general-mixins.scss
+++ b/web/themes/custom/citizen_dart/components/00-base/variables/_general-mixins.scss
@@ -642,7 +642,7 @@
     .profile-stacked-icons{
       margin-bottom: u.$spaceSm;
       .profile-stacked-icon{
-        color: c.$gold;
+        color: c.$navy;
         font-size: 1.5rem;
         line-height: 2;
         @include safeFlex(row,nowrap,start,center);
@@ -653,7 +653,7 @@
           margin-right: u.$spaceXxs;
           svg path {
             fill: none;
-            stroke: c.$gold;
+            stroke: c.$navy;
           }
         }//end icon wrapper
       }//end profile stacked icon
